# graphql-spike-jennifer-black

./: .gitignore  .pre-commit-config.yaml  .properties.yml  package.json  pyproject.toml  serverless.yml  setup.cfg
docs/: openapi.yaml
graphql_spike_jennifer_black/: __init__.py  types.py
graphql_spike_jennifer_black/graphql/: clients.py  controllers.py  dto.py  resolvers.py
graphql_spike_jennifer_black/schema/: schema.graphql
graphql_spike_jennifer_black/status/: controllers.py
serverless/: custom.yml  functions.yml
serverless/environments/: integration-au.yml  integration.yml  live-us.yml  singletenant-test.yml  tdbank.yml  test-au.yml  test.yml
serverless/variables/: integration-au.yml  integration.yml  live.yml  test.yml
tests/: conftest.py  test_graphql_controllers.py  test_status.py
